syntax = "proto3";

package myblog;

option java_package = "com.maan.myblog";
option java_multiple_files = true;
option java_outer_classname = "BlogProtoClass";

import "google/protobuf/empty.proto";

message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

message BlogId {
  string id = 1;
}

service BlogService {
  rpc createBlog(Blog) returns(BlogId);
  rpc readBlog(BlogId) returns(Blog);
  rpc updateBlog(Blog) returns(google.protobuf.Empty);
  rpc deleteBlog(BlogId) returns(google.protobuf.Empty);
  rpc listBlogs(google.protobuf.Empty) returns(stream Blog);
}